<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_date"
        android:title="@string/filter_option_1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/filter_room"
        android:title="@string/filter_option_2"
        app:showAsAction="collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/filters_reset"
        android:title="@string/filter_reset"
        app:showAsAction="never"/>
</menu>